2005-03-24  Matti Aarnio  <mea@zmailer.org>

	* transports/errormail/errormail.c:
	    Hardwire the default-form in with a bit more elegance, also
	    output all recipients on visible headers!

	* transports/libta/dnsgetrr.c:
	   Drop off  res_hnok() and res_dnok()  calls, which are
	   unnecessary in our use..

	* transports/smtp/smtp.c:
	    Debugging some suspicuous EZMLM-mode behaviour.

	* router/router.c, router/functions.c, router/prototypes.h:
	   Eliminate the need for 'struct shCmd' in prototypes.h
	   by moving a bit of code from  router.c  to functions.c.

2005-02-18  Matti Aarnio  <mea@zmailer.org>

	* transports/mailbox/mailbox.c, transports/mailbox/mboxpath.c:
	    Versatilize -DD..  -PP..  and  -XX..   options.

	* man/mailbox.8.in, man/mboxpath.1.in, man/vacation.1.in:
	    Document better the existing machinery.

	* doc/guides/smtpserver-spf:
	    Email from Darryl L. Miles about usage of SPF.

2005-01-27  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtpserver.c:
	    Copy all  optarg  string data that remains in use
	    for more than getopt() loop time.

	* lib/zgetbindaddr.c:
	    Parse bindaddr data so that if we are expeciting IPv4, don't
	    accept IPv6 address text (and vice versa.)

	* smtpserver/cfgread.c:
	    Parse IPv6 and IPv4 versions of the bind-parameter addresses,
	    complain (to log) if failing somehow.
	    FIXME: Still possibly needs revising .. 

	* smtpserver/smtpserver.c:
	    Revised listening server socket creations.
	    Still sometimes failing to create listening sockets,
	    if previous smtp server instance is still around..

	* smtpserver/smtpserver.c:
	    The logfp  is possibly to be opened, and again closed
	    within the  reaper()  routine.  (Hmm..  is it _truly_
	    safe there ?   After all, the signals can arrive
	    at any time...)

	* smtpserver/mxverify.c:
	    Track debug stuff of  'mxislocal'  kind.

	* smtpserver/zpwmatch-pipe.c:
	    Note about built-in presumptions.

	* lib/selfaddrs.c: