@@ -1,5 +1,8 @@
 2005-03-24  Matti Aarnio  <mea@zmailer.org>
 
+	* transports/smtp/smtp.c, transports/smtp/smtptls.c:
+	    GCC-4.0.0 fixes.
+
 	* transports/errormail/errormail.c:
 	    Hardwire the default-form in with a bit more elegance, also
 	    output all recipients on visible headers!
